tests/ui/dyn-keyword/inferred-type-in-qualified-path-for-with-one-impl.rs
trait Trait {
    fn function() {}
}

impl Trait for () {}

fn main() {
    Trait::function();
    //~^ ERROR cannot call associated function on trait without specifying the corresponding `impl` type
}
